--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -11,6 +11,12 @@
 </head>
 <body>
   <script>0</script>
-  <h1>Under construction</h1>
+  <h1>Upload a file!</h1>
+
+  <form action="/upload" method = "POST" enctype="multipart/form-data">
+    <input type="file" id="myFile" name="uploaded_file">
+    <input type="submit">
+  </form>
+
 </body>
 </html>
