--- a/css/styles.css
+++ b/css/styles.css
@@ -2,14 +2,14 @@ body{
   display:flex;
   justify-content: center;
   align-content: center;
-  background-color: rgb(54, 49, 49);
+  background-color: #0B0C10;
 }
 
 .signUp{
   display:flex;
   flex-direction: column;
-  border-color: cadetblue;
-  background-color: aqua;
+  border-color: #66FCF1;
+  background-color: #45A29E;
   margin: 30px;
   padding: 30px;
   border-radius: 5px;
@@ -22,8 +22,8 @@ body{
 .logIn{
   display:flex;
   flex-direction: column;
-  border-color: cadetblue;
-  background-color: aqua;
+  border-color: #66FCF1;
+  background-color: #45A29E;
   margin: 30px;
   padding: 30px;
   border-radius: 5px;
@@ -34,7 +34,7 @@ body{
   display: flex;
   padding:50px;
   margin:50px;
-  background-color:rgb(47, 56, 47);
+  background-color: #45A29E;
 }
 
 .file-folder{
