--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -12,7 +12,8 @@
   <script>0</script>
   
   <form class ="signUp" action="/register" method="POST">
-    <h1>Sign Up</h1>
+    <h1>Welcome to a boring file uploader!</h1>
+    <h2>Sign Up</h2>
     <label for="firstname">First Name</label>
     <input id="firstname" name="firstname" placeholder="First Name" type="text" />
     <label for="lastname">Last Name</label>
