--- a/css/styles.css
+++ b/css/styles.css
@@ -15,8 +15,8 @@ body{
   border-radius: 5px;
   text-align: left;
   justify-content: center;
-  width:250px;
-  height:250px;
+  min-width:250px;
+  min-height:250px;
 }
 
 .logIn{
